fix: replase sass, add: switcher

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,6 +5,9 @@
 @import "base/base";
 @import "base/hamburger";
 
+//components
+@import "components/switch";
+
 //layout
 @import "layout/header";
 @import "layout/navigation";
