--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -113,6 +113,76 @@ html {
   right: 0px;
 }
 
+.main-card {
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  width: 300px;
+  height: 280px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  line-height: 36px;
+  font-weight: 400;
+  text-align: center;
+  text-decoration: none;
+  color: black;
+  font-size: 2rem;
+  cursor: pointer;
+  background: linear-gradient(180deg, #787e26, #6db60e 40%, #fff 0, #fff);
+}
+
+.main-card__image {
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  border: 10px solid #fff;
+  object-fit: cover;
+  margin: 30px auto;
+}
+
+.card {
+  position: relative;
+  width: 300px;
+  height: 260px;
+  display: flex;
+  border-radius: 5px;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+.front {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+}
+
+.card-img {
+  width: 100%;
+}
+
+.card-name {
+  font-size: 2rem;
+  text-align: center;
+}
+
+.rotate {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-image: url("/src/img/rotate.svg");
+  background-size: 32px;
+  background-repeat: no-repeat;
+}
+
 .container-header {
   display: flex;
   justify-content: space-between;
@@ -129,6 +199,16 @@ html {
   position: absolute;
   width: 380px;
   left: -500;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 1440px;
+  margin: auto;
+  padding: 25px 25px;
 }
 
 /*# sourceMappingURL=style.css.map */
