--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,7 +7,10 @@
 
 //components
 @import "components/switch";
+@import "components/main-card";
+@import "components/card";
 
 //layout
 @import "layout/header";
 @import "layout/navigation";
+@import "layout/main-container";
