--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -1,4 +1,5 @@
 .card {
+    margin: 20px;
     position: relative;
     width: 300px;
     height: 260px;
@@ -12,6 +13,8 @@
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
 }
 .back {
     position: absolute;
@@ -21,6 +24,9 @@
 }
 .card-img {
     width: 100%;
+}
+.card-img__full{
+    height: 100%;
 }
 .card-name {
     font-size: 2rem;
