--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -114,6 +114,10 @@ html {
 }
 
 .main-card {
+  margin-top: 40px;
+}
+
+.main-card__link {
   display: flex;
   flex-direction: column;
   border-radius: 5px;
@@ -140,6 +144,7 @@ html {
 }
 
 .card {
+  margin: 20px;
   position: relative;
   width: 300px;
   height: 260px;
@@ -154,6 +159,8 @@ html {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .back {
@@ -165,6 +172,10 @@ html {
 
 .card-img {
   width: 100%;
+}
+
+.card-img__full {
+  height: 100%;
 }
 
 .card-name {
