--- a/src/sass/base/_hamburger.scss
+++ b/src/sass/base/_hamburger.scss
@@ -9,16 +9,20 @@
 }
 
 .hamburger {
+  z-index: 2;
   position: relative;
   display: inline-block;
   width: 33px;
   height: 27px;
+  cursor: pointer;
   &::before {
+    transition: transform 0.27s ease-in-out;
     @extend %hamburger__line;
     top: 0;
     left: 0;
   }
   &::after {
+    transition: transform 0.27s ease-in-out;
     @extend %hamburger__line;
     bottom: 0;
     left: 0;
@@ -28,4 +32,30 @@
 .hamburger__line {
   @extend %hamburger__line;
   top: calc(50% - 2px);
+  transition: transform 0.27s ease-in-out;
+}
+
+.hamburger-active {
+  position: relative;
+  display: inline-block;
+  width: 33px;
+  height: 27px;
+  &::before {
+    transform: rotate(45deg) translate(6px, 11px);
+    transition: transform 0.27s ease-in-out;
+    @extend %hamburger__line;
+    top: 0;
+    left: 0;
+  }
+  &::after {
+    transform: rotate(-45deg) translate(5px, -10px);
+    transition: transform 0.27s ease-in-out;
+    @extend %hamburger__line;
+    bottom: 0;
+    left: 0;
+  }
+}
+.hamburger__line-active {
+  transition: transform 0.27s ease-in-out;
+  display: none;
 }
