--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -1,44 +1,47 @@
 .card {
-    margin: 20px;
-    position: relative;
-    width: 300px;
-    height: 260px;
-    display: flex;
-    border-radius: 5px;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  margin: 20px;
+  position: relative;
+  width: 300px;
+  height: 260px;
+  display: flex;
+  border-radius: 5px;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 .front {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 .back {
-    position: absolute;
-    top: 0;
-    left: 0;
-    visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  visibility: hidden;
 }
 .card-img {
-    width: 100%;
+  width: 100%;
 }
-.card-img__full{
-    height: 100%;
+.card-img__full {
+  height: 100%;
 }
 .card-name {
-    font-size: 2rem;
-    text-align: center;
+  font-size: 2rem;
+  text-align: center;
 }
-.rotate {
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    background-image: url("/src/img/rotate.svg");
-    background-size: 32px;
-    background-repeat: no-repeat;
+.card-name-off {
+  display: none;
+}
+.rotate-img {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-image: url("/src/img/rotate.svg");
+  background-size: 32px;
+  background-repeat: no-repeat;
 }
