--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,8 +9,11 @@
 @import "components/switch";
 @import "components/main-card";
 @import "components/card";
+@import "components/buttons";
 
 //layout
 @import "layout/header";
 @import "layout/navigation";
 @import "layout/main-container";
+@import "layout/result-page";
+@import "layout/rating";
