--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -1,5 +1,4 @@
 .card {
-  margin: 20px;
   position: relative;
   width: 300px;
   height: 260px;
@@ -8,21 +7,41 @@
   flex-direction: column;
   align-items: center;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  margin: 20px;
+  perspective: 1000px;
+  background-color: transparent;
+  transform-style: preserve-3d;
+  transition: all 0.3s ease 0s;
+  &:hover {
+    transition: transform 0.27s ease-in-out;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.4);
+  }
+  @media only screen and (max-width: 400px){
+    height: 220px;
+  }
 }
-.front {
+
+.front,
+.back {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  transition: all 0.3s ease 0s;
+}
+.front,
+.back,
+.rotate {
+  backface-visibility: hidden;
 }
 .back {
-  position: absolute;
-  top: 0;
-  left: 0;
-  visibility: hidden;
+  transform: rotateY(180deg);
+  transition: all 0.3s ease 0s;
 }
+
 .card-img {
+  height: 75%;
   width: 100%;
 }
 .card-img__full {
@@ -36,6 +55,8 @@
   display: none;
 }
 .rotate-img {
+  backface-visibility: hidden;
+  filter: grayscale(1);
   width: 50px;
   height: 50px;
   position: absolute;
@@ -44,4 +65,15 @@
   background-image: url("/src/img/rotate.svg");
   background-size: 32px;
   background-repeat: no-repeat;
+}
+.rotate-img-off {
+  width: 0px;
+  height: 0px;
+}
+.target {
+  opacity: 0.3;
+}
+.translate {
+  transform: rotateY(180deg);
+  transition: all 0.3s ease 0s;
 }
