--- a/src/sass/components/_main-card.scss
+++ b/src/sass/components/_main-card.scss
@@ -1,5 +1,6 @@
 .main-card {
-  margin-top: 40px;
+  margin: 20px;
+  cursor: pointer;
 }
 
 .main-card__link {
@@ -9,6 +10,7 @@
   width: 300px;
   height: 280px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  transition: transform 0.27s ease-in-out;
   line-height: 36px;
   font-weight: 400;
   text-align: center;
@@ -17,6 +19,10 @@
   font-size: 2rem;
   cursor: pointer;
   background: linear-gradient(180deg, #787e26, #6db60e 40%, #fff 0, #fff);
+  &:hover {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.5), 0 2px 10px 0 rgba(0, 0, 0, 0.9);
+    transition: transform 0.27s ease-in-out;
+  }
 }
 
 .main-card__image {
