--- a/src/sass/layout/_main-container.scss
+++ b/src/sass/layout/_main-container.scss
@@ -1,7 +1,7 @@
-.main-container {
+.container {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
     max-width: 1440px;
     margin: auto;
