--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -14,6 +14,7 @@ html {
   border-radius: 5px;
   height: 4px;
   width: 100%;
+  pointer-events: none;
 }
 
 .hamburger {
@@ -143,7 +144,8 @@ html {
 }
 
 .main-card {
-  margin-top: 40px;
+  margin: 20px;
+  cursor: pointer;
 }
 
 .main-card__link {
@@ -153,6 +155,7 @@ html {
   width: 300px;
   height: 280px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  transition: transform 0.27s ease-in-out;
   line-height: 36px;
   font-weight: 400;
   text-align: center;
@@ -161,6 +164,10 @@ html {
   font-size: 2rem;
   cursor: pointer;
   background: linear-gradient(180deg, #787e26, #6db60e 40%, #fff 0, #fff);
+}
+.main-card__link:hover {
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.5), 0 2px 10px 0 rgba(0, 0, 0, 0.9);
+  transition: transform 0.27s ease-in-out;
 }
 
 .main-card__image {
@@ -177,7 +184,6 @@ html {
 }
 
 .card {
-  margin: 20px;
   position: relative;
   width: 300px;
   height: 260px;
@@ -186,24 +192,45 @@ html {
   flex-direction: column;
   align-items: center;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  margin: 20px;
+  perspective: 1000px;
+  background-color: transparent;
+  transform-style: preserve-3d;
+  transition: all 0.3s ease 0s;
+}
+.card:hover {
+  transition: transform 0.27s ease-in-out;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.4);
+}
+@media only screen and (max-width: 400px) {
+  .card {
+    height: 220px;
+  }
 }
 
-.front {
+.front,
+.back {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  transition: all 0.3s ease 0s;
+}
+
+.front,
+.back,
+.rotate {
+  backface-visibility: hidden;
 }
 
 .back {
-  position: absolute;
-  top: 0;
-  left: 0;
-  visibility: hidden;
+  transform: rotateY(180deg);
+  transition: all 0.3s ease 0s;
 }
 
 .card-img {
+  height: 75%;
   width: 100%;
 }
 
@@ -221,6 +248,8 @@ html {
 }
 
 .rotate-img {
+  backface-visibility: hidden;
+  filter: grayscale(1);
   width: 50px;
   height: 50px;
   position: absolute;
@@ -229,6 +258,48 @@ html {
   background-image: url("/src/img/rotate.svg");
   background-size: 32px;
   background-repeat: no-repeat;
+}
+
+.rotate-img-off {
+  width: 0px;
+  height: 0px;
+}
+
+.target {
+  opacity: 0.3;
+}
+
+.translate {
+  transform: rotateY(180deg);
+  transition: all 0.3s ease 0s;
+}
+
+.button-container {
+  width: 100%;
+  height: 50px;
+  text-align: center;
+}
+
+.repeat {
+  transition: 0.3s;
+}
+
+.hide {
+  display: none;
+}
+
+.button {
+  background-color: #459c43;
+  width: 300;
+  height: 50px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+@media only screen and (max-width: 400px) {
+  .button {
+    width: 250px;
+  }
 }
 
 .container-header {
@@ -255,6 +326,11 @@ html {
   transition: left 0.4s ease-in-out, opacity 0.33s ease-in-out;
   z-index: 1;
 }
+@media only screen and (max-width: 730px) {
+  .menu {
+    width: 300px;
+  }
+}
 
 .menu-active {
   top: 0;
@@ -274,14 +350,39 @@ html {
   background: linear-gradient(180deg, #787e26, red);
 }
 
-.main-container {
+.container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
   max-width: 1440px;
   margin: auto;
   padding: 25px 25px;
+}
+
+.result-page {
+  text-align: center;
+}
+
+.error {
+  font-size: 4rem;
+  color: red;
+  margin-top: 60px;
+}
+
+@media only screen and (max-width: 500px) {
+  .result-page__img {
+    width: 100%;
+  }
+}
+.rating {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: end;
+  max-width: 1440px;
+  height: 64px;
+  margin: 0 auto;
+  overflow: hidden;
 }
 
 /*# sourceMappingURL=style.css.map */
