--- a/movie-search/src/styles/main.scss
+++ b/movie-search/src/styles/main.scss
@@ -1,7 +1,9 @@
 @import "~normalize.css";
 @import "fonts.css";
+//base
+@import "./base/base";
+//layout
+@import "./layout/header";
+@import "./layout/search";
+@import "./layout/footer";
 
-.sass{
-    font-family: 'Roboto', sans-serif;
-    color: white;
-}
