add:yandex translate api, render movie page function

--- a/movie-search/src/styles/main.scss
+++ b/movie-search/src/styles/main.scss
@@ -1,9 +1,12 @@
 @import "~normalize.css";
 @import "fonts.css";
+// @import "./swiper/swiper.css";
+@import "./swiper/swiper.min.css";
 //base
 @import "./base/base";
 //layout
 @import "./layout/header";
 @import "./layout/search";
 @import "./layout/footer";
+@import "./layout/swiper";
 
