--- a/movie-search/src/styles/main.scss
+++ b/movie-search/src/styles/main.scss
@@ -4,6 +4,8 @@
 @import "./swiper/swiper.min.css";
 //base
 @import "./base/base";
+//components
+@import "./components/movieCards";
 //layout
 @import "./layout/header";
 @import "./layout/search";
