--- a/movie-search/src/styles/layout/_footer.scss
+++ b/movie-search/src/styles/layout/_footer.scss
@@ -1,4 +1,14 @@
 .footer{
-    display: flex;
-    bottom: 0;
+    height: 80px;
+    background-image: url(/src/assets/images/footer.jpg);
+    background-size: cover;
+    margin-top: 59px;
+}
+.footer__content {
+    font-family: "Roboto", sans-serif;
+    font-size: 1.5rem;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 25px;
 }
