--- a/presentation/src/slides/slide-0.pug
+++ b/presentation/src/slides/slide-0.pug
@@ -1,2 +1,2 @@
-section(data-background-color='#141519' data-background-video='#' )
-  image(src='images/react-logo.jpg')
+section(data-background-image="images/background.jpg", data-background-opacity='0.3' )
+  image(src='images/webpack.png')
