--- a/presentation/src/slides/slide-1.pug
+++ b/presentation/src/slides/slide-1.pug
@@ -1,6 +1,5 @@
-section(data-background-image="images/developer-tired.jpg" )
-  h2 Front-End Development
-  include sub-sllides/subSlide-1-for-s1.pug
+section(data-background-image="images/background.jpg", data-background-opacity='0.3' )
+  section(data-background-image="images/background.jpg", data-background-opacity='0.3' )
+    h2 What is it?
   section
-    section
-      include sub-sllides/subSlide-2-for-s1.pug
+    image(src='images/whatis.png')
