add: few slides

--- a/presentation/src/slides/slide-2.pug
+++ b/presentation/src/slides/slide-2.pug
@@ -1,6 +1,6 @@
 section(data-background-image="images/background.jpg", data-background-opacity='0.3' )
   section(data-background-image="images/background.jpg", data-background-opacity='0.3' )
-    h3 how to install?
+    h3 How to install?
     code.
       npm i webpack webpack-cli --save-dev
   section
