--- a/presentation/src/slides/slide-3.pug
+++ b/presentation/src/slides/slide-3.pug
@@ -1,6 +1,6 @@
 section(data-background-image="images/background.jpg", data-background-opacity='0.3' )
   section(data-background-image="images/background.jpg", data-background-opacity='0.3' )
-    h3 config
+    h3 Config
   section
     image(src="images/config.png")
   section
