--- a/presentation/src/slides/slide-4.pug
+++ b/presentation/src/slides/slide-4.pug
@@ -1,6 +1,6 @@
 section(data-background-image="images/background.jpg", data-background-opacity='0.3' )
   section
-    h3 what happened?
+    h3 What happened?
   section
     h3 result
     image(src='images/result.png')
