--- a/fancy-weather/src/styles/main.scss
+++ b/fancy-weather/src/styles/main.scss
@@ -1,6 +1,10 @@
-@import './layout/header';
-@import './layout/main-container';
+@import "./layout/header";
+@import "./layout/main-container";
+@import "./layout/search";
 
 body {
-  background-color: grey;
+  background: url("https://images.unsplash.com/photo-1566335865949-efa4a220d4cb?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjEzODcyMX0");
+  background-color: #000;
+  background-position: 50%;
+  background-size: cover;
 }
