--- a/fancy-weather/src/styles/layout/_map.scss
+++ b/fancy-weather/src/styles/layout/_map.scss
@@ -1,14 +1,29 @@
-.map-container{
-    margin: 5px;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 5px;
+.map-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 40%;
+  margin: 5px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  height: 817px;
+  @media only screen and (max-width: 1024px) {
+    max-width: 100%;
+  }
 }
 .map-container__content {
-    margin: 40 auto;
-    width: 90%;
-    height: 87%;
-    max-height: 572px;
-    border-radius: 25px;
-    overflow: hidden;
-    position: relative;
+  margin: 40 auto;
+  width: 90%;
+  height: 87%;
+  max-height: 572px;
+  border-radius: 25px;
+  overflow: hidden;
+  position: relative;
+}
+.map-content__coorditaions {
+  font-size: 1.2em;
+  color: #fff;
+  text-transform: uppercase;
+  text-align: right;
+  margin-right: 20px;
 }
