--- a/fancy-weather/src/styles/main.scss
+++ b/fancy-weather/src/styles/main.scss
@@ -4,8 +4,16 @@
 @import "./layout/map";
 
 body {
-  background: url("https://images.unsplash.com/photo-1566335865949-efa4a220d4cb?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjEzODcyMX0");
   background-color: #000;
   background-position: 50%;
   background-size: cover;
+}
+html {
+  font-size: 16px;
+  @media only screen and (max-width: 1024px) {
+    font-size: 12px;
+  }
+  @media only screen and (max-width: 1176px) {
+    font-size: 14px;
+  }
 }
