--- a/presentation/src/sass/main.scss
+++ b/presentation/src/sass/main.scss
@@ -1,5 +1,5 @@
-@import '../../node_modules/reveal.js/css/reveal.css';
-@import '../../node_modules/reveal.js/css/theme/night.css';
+@import "../../node_modules/reveal.js/css/reveal.css";
+@import "../../node_modules/reveal.js/css/theme/night.css";
 
 .title {
   color: #fff;
